# Mini_project

./: .gitignore  CMakeLists.txt
lib/mp_shared_memory/: CMakeLists.txt  mp_shared_memory_object.cpp  mp_shared_memory_object.hpp  unordered_map_shm.cpp  unordered_map_shm.hpp
src/communication/: CMakeLists.txt  communication.c  communication.cpp
src/exit/: CMakeLists.txt  exit.cpp
src/log/: CMakeLists.txt  log.c  log.cpp
src/sensor/: CMakeLists.txt  sensor.c  sensor.cpp
src/setup/: CMakeLists.txt  main_setup.cpp  setup.cpp  setup.hpp
tool/: build.sh
